test/parser/cases/valid/small/nested_literals.cp
main()
{
    let rows: [[i32; 3]; 2] = [[1, 2, 3], [4, 5, 6]];
    let triple: (i32, f64, char) = (1, 2.0, 'x');
}
